Update build-pipeline.yml for Azure Pipelines

--- a/.azdo/build-pipeline.yml
+++ b/.azdo/build-pipeline.yml
@@ -14,7 +14,7 @@ jobs:
   displayName: 'Package: '
 
   pool:
-    vmImage: 'ubuntu-latest'
+    name: pool-ubuntu-2004
 
   variables:
     goVersion: 1.18.2
