fix build pipeline

--- a/.azdo/azure-pipelines.yml
+++ b/.azdo/azure-pipelines.yml
@@ -63,6 +63,11 @@ stages:
               OS: $(OS)
               ARCH: $(ARCH)
               VERSION: ${{ parameters.version }}
+          - task: UseDotNet@2
+            displayName: 'Install .NET SDK'
+            inputs:
+              packageType: 'sdk'
+              version: '3.x'
           - task: EsrpCodeSigning@1
             displayName: "Sign Binary (Windows Only)"
             condition: eq(variables.OS, 'windows')
@@ -155,6 +160,11 @@ stages:
             displayName: "Prepare Binary Archives & Digests"
             env:
               VERSION: ${{ parameters.version }}
+          - task: UseDotNet@2
+            displayName: 'Install .NET SDK'
+            inputs:
+              packageType: 'sdk'
+              version: '3.x'
           - task: EsrpCodeSigning@1
             displayName: "Sign Binary Archive Digests"
             inputs:
