--- a/.github/workflows/golint.yaml
+++ b/.github/workflows/golint.yaml
@@ -15,9 +15,9 @@ jobs:
       fail-fast: true
     steps:
       - uses: actions/checkout@v2
-      - uses: actions/setup-go@v2
+      - uses: actions/setup-go@v5
         with:
-          go-version: '1.20'
+          go-version-file: 'go.mod'
       - uses: golangci/golangci-lint-action@v2
         with:
           version: 'v1.54'
